--- a/src/Components/PlanPage/PlanPage.css
+++ b/src/Components/PlanPage/PlanPage.css
@@ -1,6 +1,7 @@
 .plan-page {
-  background-color: #fdfdfd;
+  background-color: #f1f1f1;
   padding: 1rem;
+  padding-bottom: 5rem;
 }
 .plan-page--title {
   margin-bottom: 0;
